modifiquei linha 194 - O nome do filme

--- a/Resiliaflix/html/index.html
+++ b/Resiliaflix/html/index.html
@@ -191,8 +191,7 @@
 
                 <div class="filmes"> <!--forest Gump-->
                     <a href="">
-                        <h3>
-                            forest Gump - O contador de Histórias</h3>
+                        <h3>Forest Gump </h3>
                     <div  class="caixa">
                         <img src="../img/filmes/forest gump.jpg" alt=""></div>
                     </a>
