Refiz o js no modelo MVC

--- a/apod/html/index.html
+++ b/apod/html/index.html
@@ -35,6 +35,9 @@
           Copyrigth 2020 &copy;<a href="https://github.com/Inaralmeida">Inara Almeida</a>.Todos os direitos reservados
     </footer>
     
+    <script src="../js/model.js"></script>
+    <script src="../js/view.js"></script>
+    <script src="../js/controller.js"></script>
     <script src="../js/index.js"></script>
 </body>
 </html>
